library/src/cbor/libqcbormap.h

typedef QCborMap::ConstIterator QCborMap__ConstIterator;
typedef QCborMap::Iterator QCborMap__Iterator;
typedef struct QCborMap QCborMap;
typedef struct QCborMap__ConstIterator QCborMap__ConstIterator;
typedef struct QCborMap__Iterator QCborMap__Iterator;
typedef struct QCborValue QCborValue;
typedef struct QCborValueRef QCborValueRef;
typedef struct QJsonObject QJsonObject;
QCborMap* QCborMap_new();
QCborMap* QCborMap_new2(QCborMap* other);
void QCborMap_OperatorAssign(QCborMap* self, QCborMap* other);
void QCborMap_Swap(QCborMap* self, QCborMap* other);
QCborValue* QCborMap_ToCborValue(const QCborMap* self);
ptrdiff_t QCborMap_Size(const QCborMap* self);
bool QCborMap_IsEmpty(const QCborMap* self);
void QCborMap_Clear(QCborMap* self);
libqt_list /* of QCborValue* */ QCborMap_Keys(const QCborMap* self);
QCborValue* QCborMap_Value(const QCborMap* self, long long key);
QCborValue* QCborMap_Value2(const QCborMap* self, libqt_string key);
QCborValue* QCborMap_Value3(const QCborMap* self, QCborValue* key);
QCborValue* QCborMap_OperatorSubscript(const QCborMap* self, long long key);
QCborValue* QCborMap_OperatorSubscript2(const QCborMap* self, libqt_string key);
QCborValue* QCborMap_OperatorSubscript3(const QCborMap* self, QCborValue* key);
QCborValueRef* QCborMap_OperatorSubscript4(QCborMap* self, long long key);
QCborValueRef* QCborMap_OperatorSubscript6(QCborMap* self, libqt_string key);
QCborValueRef* QCborMap_OperatorSubscript7(QCborMap* self, QCborValue* key);
QCborValue* QCborMap_Take(QCborMap* self, long long key);
QCborValue* QCborMap_Take2(QCborMap* self, libqt_string key);
QCborValue* QCborMap_Take3(QCborMap* self, QCborValue* key);
void QCborMap_Remove(QCborMap* self, long long key);
void QCborMap_Remove2(QCborMap* self, libqt_string key);
void QCborMap_Remove3(QCborMap* self, QCborValue* key);
bool QCborMap_Contains(const QCborMap* self, long long key);
bool QCborMap_Contains2(const QCborMap* self, libqt_string key);
bool QCborMap_Contains3(const QCborMap* self, QCborValue* key);
int QCborMap_Compare(const QCborMap* self, QCborMap* other);
bool QCborMap_OperatorEqual(const QCborMap* self, QCborMap* other);
bool QCborMap_OperatorNotEqual(const QCborMap* self, QCborMap* other);
bool QCborMap_OperatorLesser(const QCborMap* self, QCborMap* other);
QCborMap__Iterator* QCborMap_Begin(QCborMap* self);
QCborMap__ConstIterator* QCborMap_ConstBegin(const QCborMap* self);
QCborMap__ConstIterator* QCborMap_Begin2(const QCborMap* self);
QCborMap__ConstIterator* QCborMap_Cbegin(const QCborMap* self);
QCborMap__Iterator* QCborMap_End(QCborMap* self);
QCborMap__ConstIterator* QCborMap_ConstEnd(const QCborMap* self);
QCborMap__ConstIterator* QCborMap_End2(const QCborMap* self);
QCborMap__ConstIterator* QCborMap_Cend(const QCborMap* self);
QCborMap__Iterator* QCborMap_Erase(QCborMap* self, QCborMap__Iterator* it);
QCborMap__Iterator* QCborMap_EraseWithIt(QCborMap* self, QCborMap__ConstIterator* it);
QCborValue* QCborMap_Extract(QCborMap* self, QCborMap__Iterator* it);
QCborValue* QCborMap_ExtractWithIt(QCborMap* self, QCborMap__ConstIterator* it);
bool QCborMap_Empty(const QCborMap* self);
QCborMap__Iterator* QCborMap_Find(QCborMap* self, long long key);
QCborMap__Iterator* QCborMap_Find2(QCborMap* self, libqt_string key);
QCborMap__Iterator* QCborMap_Find3(QCborMap* self, QCborValue* key);
QCborMap__ConstIterator* QCborMap_ConstFind(const QCborMap* self, long long key);
QCborMap__ConstIterator* QCborMap_ConstFind2(const QCborMap* self, libqt_string key);
QCborMap__ConstIterator* QCborMap_ConstFind3(const QCborMap* self, QCborValue* key);
QCborMap__ConstIterator* QCborMap_Find4(const QCborMap* self, long long key);
QCborMap__ConstIterator* QCborMap_Find6(const QCborMap* self, libqt_string key);
QCborMap__ConstIterator* QCborMap_Find7(const QCborMap* self, QCborValue* key);
QCborMap__Iterator* QCborMap_Insert(QCborMap* self, long long key, QCborValue* value_);
QCborMap__Iterator* QCborMap_Insert3(QCborMap* self, libqt_string key, QCborValue* value_);
QCborMap__Iterator* QCborMap_Insert4(QCborMap* self, QCborValue* key, QCborValue* value_);
QCborMap__Iterator* QCborMap_InsertWithQCborMapvalueType(QCborMap* self, libqt_pair /* tuple of QCborValue* and QCborValue* */ v);
QCborMap* QCborMap_FromVariantMap(libqt_map /* of libqt_string to QVariant* */ mapVal);
QCborMap* QCborMap_FromVariantHash(libqt_map /* of libqt_string to QVariant* */ hash);
QCborMap* QCborMap_FromJsonObject(QJsonObject* o);
libqt_map /* of libqt_string to QVariant* */ QCborMap_ToVariantMap(const QCborMap* self);
libqt_map /* of libqt_string to QVariant* */ QCborMap_ToVariantHash(const QCborMap* self);
QJsonObject* QCborMap_ToJsonObject(const QCborMap* self);